Added DELETE /appointments/:id documentation
